--- a/res/layout/choose1.xml
+++ b/res/layout/choose1.xml
@@ -128,17 +128,13 @@
         android:src="@drawable/home_two" />
 		</RelativeLayout>
 	<TabHost
-        
         android:id="@+id/tabhost"
-        android:layout_width="fill_parent"
-        android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical" 
-        android:background="#E8E8E8">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <TabWidget
@@ -152,33 +148,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
+                <!-- 第一个tab的布局 -->
                 <LinearLayout
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal" >
+                    android:layout_height="match_parent" 
+                     android:orientation="vertical"
+                    >
                 </LinearLayout>
 
+                <!-- 第二个tab的布局 -->
                 <LinearLayout
                     android:id="@+id/tab2"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                  >
+                    android:layout_height="match_parent" 
+                     android:orientation="vertical">
                 </LinearLayout>
 
+                <!-- 第三个tab的布局 -->
                 <LinearLayout
                     android:id="@+id/tab3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal" >
+                     android:orientation="vertical" >
                 </LinearLayout>
-
+                <!-- 第四个tab的布局 -->
                 <LinearLayout
                     android:id="@+id/tab4"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal" >
+                    android:layout_height="match_parent" 
+                     android:orientation="vertical">
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
